--- a/package.json
+++ b/package.json
@@ -33,7 +33,12 @@
     "@babel/node": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
+    "mini-css-extract-plugin": "^2.0.0",
     "nodemon": "^2.0.7",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.0.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
   }
