--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "videos share platform",
   "scripts": {
+    "build:server": "babel src -d build",
     "sts:server": "nodemon",
     "sts:assets": "webpack"
   },
@@ -33,6 +34,7 @@
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
